package models;

import io.ebean.Model;

import javax.persistence.*;

@Entity
@Table(name = "publisher")
public class PublisherModel extends Model {

    @Id
    @Column(name = "id")
    private int id;

    @Column(name = "name")
    private String name;


    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
