@startuml

title __MYPROJECT's Class Diagram__\n

  package controllers {
    class $model {
    }
  }
  

  package controllers {
    class $model {
    }
  }
  

  package dto {
    class Author {
    }
  }
  

  package models {
    class AuthorModel {
    }
  }
  

  package dto {
    class Book {
    }
  }
  

  package models {
    class BookModel {
    }
  }
  

  package dto {
    class DVD {
    }
  }
  

  package models {
    class DVDModel {
    }
  }
  

  package dto {
    class Date {
    }
  }
  

  package controllers {
    class HomeController {
    }
  }
  

  package dto {
    abstract class LibraryItem {
    }
  }
  

  package services {
    interface LibraryManager {
    }
  }
  

  package dto {
    class OverDueItem {
    }
  }
  

  package dto {
    class Person {
    }
  }
  

  package dto {
    class Publisher {
    }
  }
  

  package models {
    class PublisherModel {
    }
  }
  

  package dto {
    class Reader {
    }
  }
  

  package models {
    class ReaderModel {
    }
  }
  

  package services {
    class WestminsterLibraryManager {
    }
  }
  

  package controllers {
    class routes {
    }
  }
  

  Author -up-|> Person
  AuthorModel -up-|> Model
  Book -up-|> LibraryItem
  BookModel o-- ReaderModel : reader
  DVD -up-|> LibraryItem
  DVDModel -up-|> Model
  DVDModel o-- ReaderModel : reader
  DVDModel o-- PublisherModel : publisher
  HomeController -up-|> Controller
  HomeController o-- LibraryManager : libraryManager
  LibraryItem o-- Reader : reader
  OverDueItem -up-|> Comparable
  OverDueItem -up-|> LibraryItem
  Publisher -up-|> Person
  PublisherModel -up-|> Model
  Reader -up-|> Person
  ReaderModel -up-|> Model
  WestminsterLibraryManager -up-|> LibraryManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
